--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,7 @@ author:
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=DTfvdwcAAAAJ&hl"
-  email            : "yan-ting.chen [at] mail.mcgill.ca"
-  email            : "ytingchen [at] princeton.edu"
+  email            : "yan-ting.chen@mail.mcgill.ca"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
