--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,9 @@ main:
         
   #- title: "Blog Posts"
   #  url: /posts/
+  
+  - title: "Research"
+    url: /research/  
     
   - title: "CV"
     url: /cv/
